--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "async's .auto() for promises",
   "main": "lib/index.js",
   "scripts": {
+    "test": "mocha --recursive --compilers js:babel-register",
     "build": "babel src -d lib"
   },
   "author": "David Touzet <dtouzet@gmail.com>",
@@ -13,10 +14,14 @@
     "babel-eslint": "^4.1.3",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.3.13",
-    "eslint": "^1.6.0"
+    "babel-register": "^6.3.13",
+    "chai": "^3.4.1",
+    "chai-as-promised": "^5.2.0",
+    "eslint": "^1.6.0",
+    "mocha": "^2.3.4"
   },
   "dependencies": {
-    "lodash": "^3.10.1",
+    "lodash.contains": "^2.4.3",
     "promise-defer": "^1.0.0"
   }
 }
