--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
+    "bluebird": "^3.1.1",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.2.0",
     "eslint": "^1.6.0",
